--- a/view/templets/home/index/common_foot.html
+++ b/view/templets/home/index/common_foot.html
@@ -1,71 +1,15 @@
 
 <!--footer-->
-<div class="footerbox">
-<div class="line"></div>
-<div class="dizhi">
-    <{$lianxi_list[1].la_content}>
-    <p><a href="www.cccuu.com">技术支持：灵秀网络科技</a></p>
-</div>
-</div>
-
-
-<!--客服-->
-<div class="lanrenzhijia_m">
-    <ul>
-        <a href="javascript:;" class="close"></a>
-        <{section name=v loop=$qq}>
-        <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=<{$qq[v].QQ}>&site=qq&menu=yes" style="left:145px;"></a>
-        <{/section}>
-        <a class="shao" style="left:235px;"></a>
-    </ul>
-</div>
-<style>
-.lanrenzhijia_m{ width:315px; height:145px; background:url(<{$templets}>/index/images/invite_bg.png) no-repeat; position:fixed; left:50%; top:50%; margin:-72px 0 0 -157px; display:none;}
-.lanrenzhijia_m ul .close{ width:25px; height:25px; display:block; position:absolute; right:0; top:0;}
-.lanrenzhijia_m ul{width:315px; height:145px; position:relative;}
-.lanrenzhijia_m ul a{ display:block; width:70px; height:22px; position:absolute; top:104px;}
-</style>
-
-<script>
-$(function(){
-    $('.lanrenzhijia_m').delay(2000).slideDown();
-    $('.lanrenzhijia_m .close,.shao').click(function(){
-        $('.lanrenzhijia_m').slideUp();
-    });
-});
-</script>
-
-<div class="fixed_box" id="fixedBox">
-    <div class="content_box">
-        <div class="content_inner">
-            <div class="close_btn"><a title="关闭"><span>关闭</span></a></div>
-            <div class="content_title"><span>客服中心</span></div>
-            <div class="content_list">              
-                <div class="qqserver">
-                    <{section name=v loop=$qq}>
-                        <p> 
-                            <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=<{$qq[v].QQ}>&amp;site=qq&amp;menu=yes">
-                            <img border="0" src="http://wpa.qq.com/pa?p=2:<{$qq[v].QQ}>:41" alt="点击这里给我发消息" title="点击这里给我发消息">
-                            <span><{$qq[v].q_name}></span>
-                            </a>
-                        </p>
-                    <{/section}>
-                                 
-                </div>               
-                <hr>
-                <div class="phoneserver">
-                    <h5>客户服务热线</h5>
-                    <p style="text-align:center; color:#238dd2; font-weight:bold;"><{$set_list.s7}></p>
-                </div>
-                <hr>
-                <div class="msgserver">
-                    <p><a href="/index.php/home/index/zaixianliuyan">给我们留言</a></p>
-                </div>
-            </div>
-            <div class="content_bottom"></div>
-        </div>
-    </div>
-    <div class="show_btn"><span>展开客服</span></div>
+div class="footer" style="position:static;">
+<ul class="footer_content">
+    <li>&2015 Proty diamonds ltd</li>
+    <li><a href="gr_about.html">关于PROTY</a></li>
+    <li><a href="gr_zixun.html">最新资讯</a></li>
+    <li><a href="gr_dianpu.html">店铺地址</a></li>
+    <li><a href="gr_FLtiaokuan.html">法律条款</a></li>
+    <li><a href="gr_wenti.html">常见问题</a></li>
+    <li><a href="gr_contact.html">联系我们</a></li>
+</ul>
 </div>
 </body>
 </html>
