--- a/view/templets/home/index/index.html
+++ b/view/templets/home/index/index.html
@@ -1,155 +1,224 @@
-<{include file="common_head.html"}>
-<link href="<{$templets}>/index/css/index.css" rel="stylesheet" type="text/css">
-<{include file="common_header.html"}>
-<!--主体区域-->
-<div class="mainbox">
-    <div class="main">
-        <div class="mainleft">
-            <div class="ntittle">
-                <h2>新闻动态</h2>
-                <a href="/index.php/home/index/news/id/15/tid/3">更多>></a>
-            </div>
-            <div class="bannerbox">
-                <div class="bannerimg">
-                    <{section name=v loop=$imgList}>
-                    <a href="/index.php/home/index/news_xq/id/<{$imgList[v]['id']}>/tid/3"><img src="<{$imgList[v]['imgAddr']}>" alt=""></a>
-                    <{/section}>
-                    <!--<a href=""><img src="<{$templets}>/index/images/p3.jpg" alt=""></a>
-                    <a href=""><img src="<{$templets}>/index/images/p3.jpg" alt=""></a>-->
-                </div>
-                <div class="biaoyu">
-                    <p>爱心传递 播散希望</p>
-                    <div class="hd">
-                        <span>1</span>
-                        <span>2</span>
-                        <span>3</span>
-                    </div>
-                </div>
-            <script>
-                jQuery(".bannerbox").slide({mainCell:".bannerimg",titCell:".hd span",delayTime:1500,trigger:"click",autoPlay:true});
-            </script> 
-            </div>
-            <div class="text">
-                <dl class="neirong">
-                    <{section name=v loop=$newsList}>
-                    <dd><a href="/index.php/home/index/news_xq/id/<{$newsList[v]['id']}>/tid/3">&nbsp;<{$newsList[v]['a_title']}></a><a href="/index.php/home/index/news_xq/id/<{$newsList[v]['id']}>/tid/<{$imgList[v]['tid']}>"><{$newsList[v]['s_time']}></a></dd>
-                    <{/section}>
-               </dl>
-            </div>
-        </div>
-        <div class="mainright">
-            <div class="stittle">
-                <h2>视频专区</h2>
-                <a href="/index.php/home/index/video/id/43/tid/3">更多>></a>
-            </div>
-            <div class="text1">
-                <dl class="neirong1">
-                    <{section name=v loop=$video_list}>
-                        <dd><a href="<{$video_list[v].url}>">&nbsp;<{$video_list[v].v_title}></a><a class="aa" href="<{$video_list[v].url}>"><{$video_list[v].c_time}></a></dd>
-                    <{/section}>
-               </dl>
-            </div>
-            <div class="yuyue"><a href="/index.php/home/index/lianxi/id/29/tid/9"><img src="<{$templets}>/index/images/p4.jpg"></a></div>
-            <div class="woyao"><a href="/index.php/home/index/zaixianliuyan/id/30/tid/9"><img src="<{$templets}>/index/images/p5.jpg"></a></div>
-        </div>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="description" content="Free Web tutorials">
+<meta name="keywords" content="HTML,CSS,JavaScript">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>普罗蒂</title>
+<link href="css/base.css" rel="stylesheet" type="text/css">
+<link href="css/index.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="css/supersized.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="theme/supersized.shutter.css" type="text/css" media="screen" />
+<script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+<script type="text/javascript" src="js/jquery.easing.min.js"></script>
+<script type="text/javascript" src="js/supersized.3.2.7.min.js"></script>
+<script type="text/javascript" src="theme/supersized.shutter.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript">
+			jQuery(function($){
+				$.supersized({
+					// Functionality
+					slide_interval          :   2500,		// Length between transitions
+					transition              :   1, 			// 0-None, 1-Fade, 2-Slide Top, 3-Slide Right, 4-Slide Bottom, 5-Slide Left, 6-Carousel Right, 7-Carousel Left
+					transition_speed		:	700,		// Speed of transition
+															   
+					// Components							
+					slide_links				:	'blank',	// Individual links for each slide (Options: false, 'num', 'name', 'blank')
+					slides 					:  	[			// Slideshow Images
+														{image : 'images/body_back.png', title : 'Image Credit: Maria Kazvan', thumb : '', url : ''},
+														{image : 'images/body_back01.png', title : 'Image Credit: Maria Kazvan', thumb : '', url : ''},
+														{image : 'images/body_back02.png', title : 'Image Credit: Maria Kazvan', thumb : '', url : ''}
+												]
+					
+				});
+		    });
+</script>
+<script>
+$(function(){
+	$(".yi01").hover(function(){
+		var x=$(".yi01").index(this);
+		$(".erjinav").hide();
+		$(".erjinav").eq(x).show();
+		},function(){
+			
+			})
+	})
+	</script>
+<script>
+$(function(){
+	$(".erjinav").hover(function(){
+		
+		},function(){
+		$(this).hide();	
+			})
+	})
+</script>
+<script>
+$(function(){
+	$(".nav li .yi01").hover(function(){
+		$(".fenye_content").hide();
+		var x=$(".nav li .yi01").index(this);
+		$(".fenye").hide();
+		$(".fenye").eq(x).fadeTo("1500",1);
+		$(".fenye").eq(x).children(".qiehuan_content").children(".julebu").animate({left:'100'},1500);
+  	
+		},function(){
+		
+			
+			})
+	})
+
+</script>
+<style>
+body{overflow:hidden;}
+.liulan{padding-top:600px;width:1000px;margin:0 auto;}
+.julebu{top:300px;height:280px;position:absolute;left:-200px;}
+@media(max-width:1400px){
+.liulan{padding-top:500px;width:1000px;margin:0 auto;}
+.julebu{top:230px;height:280px;position:absolute;left:-200px;}
+.left01{width:230px;padding-top:230px;}
+	}
+</style>
+</head>
+<body>
+<div class="header">
+	<div class="header_content">
+    	<div class="login"><a href="gr_tiaokuan.html">注册</a><a href="gr_denglu.html">登录</a></div>
+        <div class="login_text">立即注册成为会员</div>
     </div>
 </div>
-
-<!--广告位-->
-<div class="guanggao1">
-    <img src="<{$templets}>/index/images/p6.jpg">
+<div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+<div class="nav_box">
+    <ul class="nav">
+        <li class="yiyiyi">
+            <a href="daoru01.html" class="yi01">俱乐部</a>
+            <ul class="erjinav">
+                <li><a href="julebu.html">服务方式</a></li>
+                <li><a href="julebu.html">服务内容</a></li>
+                <li><a href="julebu.html">会员优势</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="daoru02.html" class="yi01">星座珠宝</a>
+            <ul class="erjinav">
+            </ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="daoru03.html" class="yi01">珠宝世界</a>
+            <ul class="erjinav">
+                    	<li><a href="zhubao.html">项链</a></li>
+                        <li><a href="zhubao.html">吊坠</a></li>
+                        <li><a href="zhubao.html">戒指</a></li>
+                        <li><a href="zhubao.html">耳环</a></li>
+                        <li><a href="zhubao.html">手链</a></li>
+                        <li><a href="zhubao.html">腕表</a></li>
+                        <li><a href="zhubao.html">对戒</a></li>
+                        <li><a href="zhubao.html">男士珠宝</a></li>
+                    </ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="daoru04.html" class="yi01">高级定制系列</a>
+            <ul class="erjinav">
+                    <li><a href="dingzhi_liulan.html">PROTY海盗梦系列</a></li>
+                    <li><a href="dingzhi_liulan.html">PROTY帝王花系列</a></li>
+                    <li><a href="dingzhi_liulan.html">PROTY风暴系列</a></li>
+                    <li><a href="dingzhi_liulan.html">PROTY大洋之花系列</a></li>
+                    <li><a href="dingzhi_liulan.html">PROTY八爪鱼系列</a></li>
+                    <li><a href="dingzhi_liulan.html">PROTY大卫之印系列</a></li>
+                    <li><a href="dingzhi_liulan.html">PROTY海盗皇后系列</a></li>
+                    <li><a href="dingzhi_liulan.html">PROTY美人鱼系列</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="daoru05.html" class="yi01">经典珠宝</a>
+            <ul class="erjinav">
+                <li><a href="jingdian_liulan.html">PROTY帝王花系列</a></li>
+                <li><a href="jingdian_liulan.html">PROTY海盗梦系列</a></li>
+                <li><a href="jingdian_liulan.html">PROTY海盗爵士系列</a></li>
+                <li><a href="jingdian_liulan.html">PROTY海洋之心系列</a></li>
+                <li><a href="jingdian_liulan.html">PROTY王者之风系列</a></li>
+                <li><a href="jingdian_liulan.html">PROTY海盗之旅系列</a></li>
+                <li><a href="jingdian_liulan.html">PROTY封印系列</a></li>
+                <li><a href="jingdian_liulan.html">PROTY黄钻系列</a></li>
+    		</ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="daoru06.html" class="yi01">PROTY之星</a>
+            <ul class="erjinav">
+                <li><a href="PROTY_xing.html">PROTY之星</a></li>
+                <li><a href="PROTY_shaitu.html">全部晒图</a></li>
+                <li><a href="PROTY_about.html">关于PTOTY之星</a></li>
+        	</ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="daoru07.html" class="yi01">品牌故事</a>
+            <ul class="erjinav">
+                    <li><a href="pinpai.html">品牌故事</a></li>
+                    <li><a href="pinpai.html">产品故事</a></li>
+                    <li><a href="pinpai.html">海上帝王花</a></li>
+            </ul>
+        </li>
+        <li class="yiyiyi">
+        	<a href="daoru08.html" class="yi01">网络精品店</a>
+            <ul class="erjinav">
+            </ul>
+        </li>
+    </ul>
+    <div style="clear:both;"></div>
 </div>
-
-<!--名医荟萃-->
-<div class="mingyibox">
-    <div class="mingyi">
-        <div class="mingleft">
-            <div class="ntittle">
-                <h2>名医荟萃</h2>
-                <a href="/index.php/home/index/mingyi">更多>></a>
-            </div>
-            <div class="bbbox">
-                <ul>
-                    <{section name=v loop=$mingyiList}>
-                    <li>
-                        <div><a href="/index.php/home/index/mingyi_xq/id/<{$mingyiList[v]['id']}>"><img src="<{$mingyiList[v]['d_pic']}>"></a></div>
-                        <p><a href="/index.php/home/index/mingyi_xq/id/<{$mingyiList[v]['id']}>"><{$mingyiList[v]['d_name']}></a></p>
-                    </li>
-                    <{/section}>
-                </ul>
-                <script>jQuery(".bbbox").slide({mainCell:"ul",autoPlay:true,effect:"leftMarquee",vis:7,interTime:50,trigger:"click"});</script>
-            </div>
-        </div>
-        <div class="mingright">
-            <div class="ntittle">
-                <h2>患者心声</h2>
-            </div>
-            <div class="bannerbox1">
-                <div class="bannerimg1">
-                    <{section name=v loop=$imgList1}>
-                    <a href="/index.php/home/index/news_xq/id/<{$imgList1[v]['id']}>/tid/3"><img src="<{$imgList1[v]['imgAddr']}>" alt=""></a>
-                    <{/section}>
-                </div>
-                <div class="biaoyu">
-                    <p>爱心传递 播散希望</p>
-                    <div class="hd">
-                        <span>1</span>
-                        <span>2</span>
-                        <span>3</span>
-                    </div>
-                </div>
-            <script>
-                jQuery(".bannerbox1").slide({mainCell:".bannerimg1",titCell:".hd span",delayTime:1500,trigger:"click",autoPlay:true});
-            </script> 
-            </div>
-        </div>
+<div class="fenye_content">
+     <div class="left01"><img src="images/left01.png" src="images/body_back.png"></div>
+     <div class="fajue">发掘珠宝的醉人魅力</div>
+     <div class="liulan" style="padding-top:0;"><a href="zhubao.html">浏览全部珠宝</a></div>
+</div>
+<div class="qiehuan01 fenye">
+    <div class="qiehuan_content">
+        <div class="julebu"><img src="images/julebu01.png" height="192" width="448"></div>
+        <div class="liulan"><a href="daoru01.html">加入俱乐部</a></div>
     </div>
 </div>
-
-<!--院务公开-->
-<div class="yuanwubox">
-    <div class="yuanwu">
-        <ul>
-            <li class="ntittle">
-                <h2>院务公开</h2>
-            </li>
-            <li class="wenzhang">
-                <img src="<{$templets}>/index/images/p9.jpg">
-                <dl class="neirong1">
-                     <{section name=v loop=$yw}>
-                        <dd><a class="bb" href="/index.php/home/index/yw_xq/id/<{$yw[v].id}>"><{$yw[v].a_title}></a><a class="aa" href="#"><{$yw[v].s_time}></a></dd>
-                    <{/section}>
-               </dl>
-            </li>
-        </ul>
-        <ul>
-            <li class="ntittle">
-                <h2>人才招聘</h2>
-            </li>
-            <li class="wenzhang">
-                <img src="<{$templets}>/index/images/p9.jpg">
-                <dl class="neirong1">
-                    <{section name=v loop=$pin}>
-                        <dd><a class="bb" href="/index.php/home/index/rencai_xq/id/<{$pin[v].id}>/tid/<{$pin[v].tid}>"><{$pin[v].a_title}></a><a class="aa" href="#"><{$pin[v].s_time}></a></dd>
-                    <{/section}>
-               </dl>
-            </li>
-        </ul>
-        <ul>
-            <li class="ntittle">
-                <h2>健康天地</h2>
-            </li>
-            <li class="wenzhang">
-                <img src="<{$templets}>/index/images/p9.jpg">
-                <dl class="neirong1">
-                   <{section name=v loop=$jk}>
-                        <dd><a class="bb" href="/index.php/home/index/rencai_xq/id/<{$jk[v].id}>/tid/<{$jk[v].tid}>"><{$jk[v].a_title}></a><a class="aa" href="#"><{$jk[v].s_time}></a></dd>
-                    <{/section}>
-               </dl>
-            </li>
-        </ul>
+<div class="qiehuan02 fenye">
+    <div class="qiehuan_content">
+        <div class="julebu"><img src="images/julebu02.png" height="239" width="371"></div>
+        <div class="liulan"><a href="daoru02.html">查看详情</a></div>
     </div>
 </div>
-
+<div class="qiehuan03 fenye">
+    <div class="qiehuan_content">
+        <div class="julebu"><img src="images/julebu03.png" height="144" width="452"></div>
+        <div class="liulan"><a href="daoru03.html">浏览珠宝世界</a></div>
+    </div>
+</div>
+<div class="qiehuan04 fenye">
+    <div class="qiehuan_content">
+        <div class="julebu"><img src="images/julebu04.png" height="144" width="445"></div>
+        <div class="liulan"><a href="daoru04.html">浏览高级珠宝系列</a></div>
+    </div>
+</div>
+<div class="qiehuan05 fenye">
+    <div class="qiehuan_content">
+        <div class="julebu"><img src="images/julebu05.png" height="144" width="447"></div>
+        <div class="liulan"><a href="daoru05.html">浏览经典珠宝</a></div>
+    </div>
+</div>
+<div class="qiehuan06 fenye">
+    <div class="qiehuan_content">
+        <div class="julebu"><img src="images/julebu06.png" height="135" width="384"></div>
+        <div class="liulan"><a href="daoru06.html">浏览PROTY之星</a></div>
+    </div>
+</div>
+<div class="qiehuan07 fenye">
+    <div class="qiehuan_content">
+        <div class="julebu"><img src="images/julebu07.png" height="257" width="368"></div>
+        <div class="liulan"><a href="daoru07.html">浏览品牌故事</a></div>
+    </div>
+</div>
+<div class="qiehuan08 fenye">
+    <div class="qiehuan_content">
+        <div class="julebu"><img src="images/julebu08.png" height="139" width="368"></div>
+        <div class="liulan"><a href="daoru08.html">浏览网络精品店</a></div>
+    </div>
+</div>
 <!--footer-->
 <{include file="common_foot.html"}>
