--- a/view/templets/home/user/common_head.html
+++ b/view/templets/home/user/common_head.html
@@ -1,1 +1,13 @@
-1111
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML,CSS,JavaScript">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>普罗蒂</title>
+    <link href="<{$templets}>/index/css/base.css" rel="stylesheet" type="text/css">
+    <link href="<{$templets}>/index/css/Css.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="<{$templets}>/index/js/jquery.js"></script>
+    <script type="text/javascript" src="<{$templets}>/index/js/gr.js"></script>
+    <script src="<{$templets}>/index/js/jquery.kkPages.js"></script>
