--- a/view/templets/home/user/common_head2.html
+++ b/view/templets/home/user/common_head2.html
@@ -1,10 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="header" style="position:static;">
+    <div class="header_content" style="overflow:visible;">
+        <div class="vip01">尊敬的    小花，您好&nbsp;&nbsp;|<a href="">退出</a></div>
+        <div class="vip02">
+            <div class="gouwu">购物车<span>2</span>件</div>
+            <div class="jairu">
+                <div class="zuijin">最近加入的宝贝：</div>
+                <ul class="bao">
+                    <li>
+                        <div class="bao_left"><a href="zhubao_xq.html"><img src="images/chanpin05.png"></a></div>
+                        <div class="bao_right">
+                            <div class="bao_name"><a href="zhubao_xq.html">精美吊坠精美吊坠精美吊坠</a></div>
+                            <div class="bao_name01">款式类型：经典</div>
+                        </div>
+                        <div class="bao_right01">
+                            <div class="bao_jiage">￥<span>39999.90</span></div>
+                            <div class="bao_jiage01"><a href="">删除</a></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="bao_left"><a href="zhubao_xq.html"><img src="images/chanpin05.png"></a></div>
+                        <div class="bao_right">
+                            <div class="bao_name"><a href="zhubao_xq.html">精美吊坠精美吊坠精美吊坠</a></div>
+                            <div class="bao_name01">款式类型：经典</div>
+                        </div>
+                        <div class="bao_right01">
+                            <div class="bao_jiage">￥<span>39999.90</span></div>
+                            <div class="bao_jiage01"><a href="">删除</a></div>
+                        </div>
+                    </li>
+                </ul>
+                <div class="chakan"><a href="yuanwang.html">查看我的愿望中心</a></div>
+            </div>
+        </div>
+        <div class="vip03">
+            <div class="gouwu">我的 PROTY</div>
+            <ul class="me">
+                <li><a href="vip.html">用户中心</a></li>
+                <li><a href="yuanwang.html">我的愿望中心</a></li>
+                <li><a href="vip_dingdan.html">我的订单</a></li>
+            </ul>
+        </div>
+        <div class="vip04">400-155-3023</div>
+        <div style="clear:both;"></div>
+    </div>
+</div>
