--- a/view/templets/wxy/admin/common_left.html
+++ b/view/templets/wxy/admin/common_left.html
@@ -11,135 +11,147 @@
                             <a href="/index.php/wxy/admin/w_list/table/nav/tid/a/table2/nav">导航列表</a>
                         </li> 
                         <li>
-                            <a href="/index.php/wxy/admin/w_list/table/label/id/1/sp/1/">注意内容</a>
+                            <a href="/index.php/wxy/admin/w_list/table/label/id/1/sp/1/">用户管理</a>
                         </li>
                         <li>
-                            <a href="/index.php/wxy/admin/w_list/table/article/tid/42/sp/1/">院务公开</a>
+                            <a href="/index.php/wxy/admin/w_list/table/label/id/1/sp/1/">珠宝类别</a>
+                        </li>
+                        <li>
+                            <a href="/index.php/wxy/admin/w_list/table/label/id/1/sp/1/">珠宝管理</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-indent nav_icon"></i>俱乐部<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/about/tid/10/sp/1/">服务方式</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/about/tid/11/sp/1/">服务内容</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/about/tid/12/sp/1/">会员优势</a>
+                                </li>
+                            </ul>
                         </li>
       
                         <li>
-                            <a href="#"><i class="fa fa-indent nav_icon"></i>关于博爱<span class="fa arrow"></span></a> 
+                            <a href="/index.php/wxy/admin/w_list/table/label/id/1/sp/1/">星座珠宝</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-indent nav_icon"></i>经典珠宝<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="/index.php/wxy/admin/w_list/table/about/tid/10/sp/1/">医院简介</a>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/15/sp/1/">PROTY帝王花系列</a>
                                 </li> 
                                 <li>
-                                    <a href="/index.php/wxy/admin/w_list/table/about/tid/11/sp/1/">医院愿望</a>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/16/sp/1/">PROTY海盗梦系列</a>
                                 </li> 
                                 <li>
-                                    <a href="/index.php/wxy/admin/w_list/table/about/tid/12/sp/1/">院长致辞</a>
-                                </li>  
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/17/sp/1/">PROTY海盗爵士系列</a>
+                                </li>
                                 <li>
-                                    <a href="/index.php/wxy/admin/w_list/table/fengcai/tid/13/sp/1/">领导风采</a>
-                                </li> 
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/15/sp/1/">PROTY海洋之心系列</a>
+                                </li>
                                 <li>
-                                    <a href="/index.php/wxy/admin/w_list/table/fengcai/tid/14/sp/1/">员工风采</a>
-                                </li> 
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/16/sp/1/">PROTY王者之风系列</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/17/sp/1/">PROTY海盗之旅系列</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/16/sp/1/">PROTY封印系列</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/17/sp/1/">PROTY黄钻系列</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a href="javascript:void(0);"><i class="fa fa-indent nav_icon"></i>PROTY之星<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/tszl/id/1/sp/1/">PROTY之星</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/22/sp/1/">全部晒图</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/23/sp/1/">关于PROTY之星</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a href="javascript:void(0);"><i class="fa fa-indent nav_icon"></i>品牌故事<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/tszl/id/1/sp/1/">品牌故事</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/22/sp/1/">产品故事</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/23/sp/1/">海上帝王花</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a href="/index.php/wxy/admin/edit/table/set/id/1/sw/1">网站精品店</a>
+                        </li>
+
+                        <li>
+                            <a href="#"><i class="fa fa-indent nav_icon"></i>交易管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/15/sp/1/">订单管理</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/16/sp/1/">收藏管理</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/17/sp/1/">积分管理</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/15/sp/1/">晒单管理</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/16/sp/1/">预约管理</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-indent nav_icon"></i>新闻动态<span class="fa arrow"></span></a> 
+                            <a href="#"><i class="fa fa-indent nav_icon"></i>会员中心<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/15/sp/1/">医院新闻</a>
-                                </li> 
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/15/sp/1/">会员资料管理</a>
+                                </li>
                                 <li>
-                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/16/sp/1/">患者心声</a>
-                                </li> 
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/16/sp/1/">地址管理</a>
+                                </li>
                                 <li>
-                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/17/sp/1/">媒体关注</a>
-                                </li>  
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/17/sp/1/">关注管理</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/15/sp/1/">投票管理</a>
+                                </li>
                             </ul>
                         </li>
-                            <li>
-                                <a href="/index.php/wxy/admin/w_list/table/keshi/sp/1/">科室导航</a>
-                            </li>
-                            <li>
-                                <a href="/index.php/wxy/admin/w_list/table/doctor/sp/1/">名医荟萃</a>
-                            </li>   
-                            <li>
-                                <a href="javascript:void(0);"><i class="fa fa-indent nav_icon"></i>健康天地<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/tszl/id/1/sp/1/">特色诊疗</a>
-                                    </li>  
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/article/tid/22/sp/1/">护理天地</a>
-                                    </li> 
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/article/tid/23/sp/1/">健康常识</a>
-                                    </li>  
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-indent nav_icon"></i>就医指南<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/jylc/id/1/sp/1/">就医流程</a>
-                                    </li>
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/article/id/25/tid/25/sp/1/">医保专区</a>
-                                    </li>
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/file">资料上传</a>
-                                    </li>
-                                </ul>
-
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-indent nav_icon"></i>人才招聘<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/article/id/27/tid/27/sp/1/">招聘信息</a>
-                                    </li>
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/pin">应聘职位</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-indent nav_icon"></i>联系我们<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/guahao/id/1/">预约挂号</a>
-                                    </li>
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/zai_liuyan/id/1/">在线留言</a>
-                                    </li>
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/connect/id/1/">联系方式</a>
-                                    </li>
-                                     <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/ktype/id/1/sp/1/">预约科室类型</a>
-                                    </li>
-                                    <li>
-                                        <a href="/index.php/wxy/admin/w_list/table/yyks/id/1/sp/1/">科室类型</a>    
-                                    </li>
-
-                                </ul>
-                            </li>
                         <li>
-                        <a href="#"><i class="fa fa-indent nav_icon"></i>图片设置<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="<{$url}>/index.php/wxy/admin/w_list/table/images/sp/1">首页轮播图</a>
-                            </li>
-                            <li>
-                               <a href="<{$url}>/index.php/wxy/admin/w_list/table/video/sp/1">首页视频专区</a>
-                            </li>
-                        </ul>
-                        <!-- /.nav-second-level -->
-                    </li>
-         
-                    <li>
-                        <a href="/index.php/wxy/admin/w_list/table/qq/sp/1">QQ设置</a>
-                    </li>
-
-                    <li>
-                        <a href="/index.php/wxy/admin/edit/table/set/id/1/sw/1">网站设置</a>
-                    </li>
-
-
+                            <a href="#"><i class="fa fa-indent nav_icon"></i>服务中心<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/15/sp/1/">退款管理</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/16/sp/1/">返修换货</a>
+                                </li>
+                                <li>
+                                    <a href="/index.php/wxy/admin/w_list/table/article/tid/17/sp/1/">投诉建议</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
